--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,11 @@
 
   <color name="white">#FCFDFD</color>
   <color name="purple">#9C75F4</color>
+  <color name="purple_transparent">#889C75F4</color>
   <color name="light_purple">#dfdcec</color>
   <color name="gray">#4a4849</color>
   <color name="card_bg">#AEB7D5</color>
+
+  <color name="evernote_green">#719D0F</color>
+  <color name="google_red">#EA4335</color>
 </resources>
